--- a/HW/users-react-ts/package.json
+++ b/HW/users-react-ts/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "json-server": "^0.17.0"
+    "@hookform/resolvers": "^2.9.7",
+    "json-server": "^0.17.0",
+    "react-hook-form": "^7.34.2",
+    "yup": "^0.32.11"
   }
 }
