--- a/HW/comap/package.json
+++ b/HW/comap/package.json
@@ -9,6 +9,7 @@
     "@googlemaps/typescript-guards": "^2.0.2",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
+    "@react-google-maps/api": "^2.13.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
+    "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
   },
