--- a/HW/comap/package.json
+++ b/HW/comap/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.35.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.0",
     "typescript": "^4.4.2",
     "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^2.1.0",
@@ -35,7 +36,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "api": "json-server db.json --routes routes.json --port=4000"
-
   },
   "eslintConfig": {
     "extends": [
