CRUD working, generic routers and child routers

--- a/14-express-ts/tsconfig.json
+++ b/14-express-ts/tsconfig.json
@@ -3,7 +3,7 @@
         "target": "ES6",
         "module": "CommonJS",
         "outDir": "dist",
-        "sourceMap": true ,   
+        "sourceMap": true    
     },
     "include" : ["src/**/*"],
     "exclude": ["node_modules", "**/*spec.ts"]
