--- a/12-node-ts/package.json
+++ b/12-node-ts/package.json
@@ -14,9 +14,9 @@
     "typescript": "^4.8.4"
   },
   "scripts": {
-    "server": "node --inspect=5858 -r ts-node/register ./src/01-dns-promises.js",
+    "server": "node --inspect=5858 -r ts-node/register ./src/05-http-server3-streams",
     "tsc": "tsc -w",
-    "start": "nodemon -w ./dist ./dist/05-http-server2.js",
+    "start": "nodemon -w ./dist ./dist/05-http-server3-streams.js",
     "build": "tsc"
   },
   "dependencies": {
