--- a/HW/comap-server/package.json
+++ b/HW/comap-server/package.json
@@ -7,9 +7,31 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "indicative": "^7.4.4",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.2",
-    "nodemon": "^2.0.20"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "@types/google.maps": "^3.50.2",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^18.8.1",
+    "@types/uuid": "^8.3.4",
+    "tslib": "^2.4.0",
+    "typescript": "^4.8.4",
+    "uuid": "^9.0.0"
+  },
+  "scripts": {
+    "server": "node --inspect=5858 -r ts-node/register ./src/comap-server.ts",
+    "tsc": "tsc -w",
+    "start": "nodemon -w ./dist",
+    "build": "tsc",
+    "nodemon": "nodemon"
   }
 }
