--- a/HW/comap/package.json
+++ b/HW/comap/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.4",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@googlemaps/typescript-guards": "^2.0.2",
+    "@hookform/resolvers": "^2.9.8",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
     "@react-google-maps/api": "^2.13.1",
@@ -18,16 +19,19 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/yup": "^0.32.0",
+    "add": "^2.0.6",
     "fast-equals": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.35.0",
+    "react-hook-form": "^7.36.1",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-share": "^4.4.0",
     "typescript": "^4.4.2",
     "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^2.1.0",
+    "yarn": "^1.22.19",
     "yup": "^0.32.11"
   },
   "scripts": {
