--- a/HW/comap-server/package.json
+++ b/HW/comap-server/package.json
@@ -6,20 +6,25 @@
   "author": "Konstantin Uzunov",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "indicative": "^7.4.4",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.10.0",
     "mongoose": "^6.6.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
+    "rxjs": "^7.5.7",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/google.maps": "^3.50.2",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.8.1",
     "@types/uuid": "^8.3.4",
